# debate_mfxb2

./: .gitignore  CLAUDE.md  README.md  demo.html  langgraph.json  main.py  pyproject.toml  数字法庭开发设想.md
src/: llm_wrapper.py  llmconfig.py  prompt.py  state.py  test.py
src/agents/: clerk.py  denfendant.py  judge.py  prosecutor.py
src/api/: __init__.py  config.py  graph_manager.py  main.py  schemas.py  session_manager.py  websocket.py
